--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
-    "prisma": "^5.9.1",
     "supertest": "^6.3.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.9.1"
   }
 }
