--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seed.js",
-    "start": "nodemon ./db/seed.js"
+    "seed": "node ./db/seed.js",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
