--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-commerce",
   "version": "1.0.0",
-  "description": "",
+  "description": "miro link for project board https://miro.com/app/board/uXjVNvAZoNc=/?share_link_id=338192230873",
   "main": "index.js",
   "scripts": {
     "seed": "node ./db/seed.js",
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "node": "^21.6.1",
     "nodemon": "^3.0.3",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -31,5 +32,16 @@
   "devDependencies": {
     "dotenv": "^16.4.2",
     "prisma": "^5.9.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BlakeBizzell/E-Commerce.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BlakeBizzell/E-Commerce/issues"
+  },
+  "homepage": "https://github.com/BlakeBizzell/E-Commerce#readme"
 }
